# unofficial-appwrite-sdk-for-rust

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml
examples/chat-app/client/: .prettierrc.yml  package.json
examples/chat-app/client/.storybook/: main.js  preview.js
examples/chat-app/client/components/: Button.stories.tsx  ChatBubble.stories.tsx  ChatBubble.tsx  ChatBubbleList.stories.tsx  ChatBubbleList.tsx  ChatTextField.stories.tsx  ChatTextField.tsx  GitHubLoginButton.stories.tsx  GitHubLoginButton.tsx  RoundedButton.stories.tsx  RoundedButton.tsx
examples/chat-app/client/hooks/: appwrite.ts
examples/chat-app/client/pages/: _app.tsx  index.tsx
examples/chat-app/client/pages/auth/: success.tsx
examples/chat-app/client/src/context/: auth.tsx
examples/chat-app/client/src/theme/: dark.theme.js  index.ts  light.theme.js
examples/chat-app/client/stories/: Introduction.stories.mdx
examples/chat-app/server/: Cargo.toml
examples/chat-app/server/src/: data.rs
examples/chat-app/server/src/routes/: mod.rs
helper/attr-macro/: Cargo.toml
helper/attr-macro/src/: lib.rs
helper/attr-macro/tests/: test_simple.rs
helper/param-macro/: Cargo.toml
helper/param-macro/src/: lib.rs
helper/param-macro/tests/: test_generics.rs  test_optional.rs  test_rename.rs  test_rename_all.rs  test_serialize.rs
src/: client.rs  error.rs  lib.rs  macros.rs
src/models/: account.rs  attribute.rs  avatar.rs  bucket.rs  collection.rs  database.rs  deployment.rs  document.rs  event.rs  execution.rs  file.rs  function.rs  health.rs  index.rs  locale.rs  log.rs  membership.rs  mod.rs  permission.rs  query.rs  runtime.rs  session.rs  team.rs  user.rs  variable.rs
src/services/: accounts.rs  avatars.rs  databases.rs  functions.rs  health.rs  locales.rs  mod.rs  storages.rs  teams.rs  users.rs
tests/source/: main.py
