[package]
name = "appwrite"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "helper/param-macro"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
async-stream = "0.3.3"
bytes = "1.2.1"
chrono = { version = "0.4.22", features = ["serde"] }
derive_more = "0.99.17"
futures-util = "0.3.23"
log = "0.4.17"
maplit = "1.0.2"
mime_guess = "2.0.4"
param-macro = { version = "0.1.0", path = "helper/param-macro" }
reqwest = { version = "0.11.11", features = ["gzip", "json", "stream", "multipart"] }
serde = { version = "1.0.143", features = ["derive"] }
serde-enum-str = "0.2.5"
serde_json = "1.0.83"
serde_with = "2.0.0"
smart-default = "0.6.0"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["io-std", "rt", "macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.3", features = ["io"] }
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.62"
dotenv = "0.15.0"
