[package]
name = "attr-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.43"
quote = "1.0.21"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
syn = { version = "1.0.99", features = ["full"] }

[dev-dependencies]
appwrite = { path = "../.." }
